--- a/style.css
+++ b/style.css
@@ -325,6 +325,7 @@ header{
 .projetos {
     display: flex;
     justify-content: space-evenly;
+    padding-bottom: 2rem;
 }
 
 .card{
@@ -385,9 +386,7 @@ header{
     margin-bottom: 2rem;
 }
 
-.card-info button{
-    width: 8rem;
-    height: 2.5rem;
+.btn{
     background: #6a3093;
     background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
     background: linear-gradient(to left, #a044ff, #6a3093);
@@ -397,10 +396,110 @@ header{
     border-radius: .5rem;
     border: none;
     box-shadow: 0 .1rem .8rem rgba(0, 0, 0, .4);
+    cursor: pointer;
+}
+
+.card-info button{
+    width: 8rem;
+    height: 2.5rem;
 }
 
 .card:hover .card-info{
     bottom: 2rem;
     opacity: 1;
     visibility: visible;
+}
+
+.sessao-contato{
+    width: 100%;
+    height: 100vh;
+    background-color: #272727;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contato-wrapper{
+    width: 60%;
+    height: 35rem;
+    display: flex;
+    box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
+}
+
+.contato-left{
+    width: 35%;
+    background: 
+        linear-gradient(rgba(15,15,15,0.6), rgba(22,22,22,0.9)),
+        url(imagens/contato.jpg);
+    background-size: cover;
+}
+
+.contato-right{
+    width: 65%;
+    background-color: #eee;
+    padding: 1rem 3rem 3rem 3rem;
+}
+
+.sessao-contato h1{
+    width: 100%;
+    text-align: center;
+    font-family: var(--font-primary);
+    color: #272727;
+    font-size: 3rem;
+    font-weight: lighter;
+}
+
+.sessao-contato form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imput-group{
+    position: relative;
+}
+
+.field{
+    background: transparent;
+    border: none;
+    width: 20rem;
+    font-size: 1.5rem;
+    font-family: var(--font-secundary);
+    border-bottom: 2px dashed #636363;
+    outline: none;
+    margin: 2rem 0;
+}
+
+.imput-group textarea{
+    padding-top: 0.5rem;
+    max-width: 25rem;
+    max-height: 3rem;
+}
+
+.field-label{
+    position: absolute;
+    left: 0;
+    top: 2rem;
+    font-size: 1.2rem;
+    font-family: var(--font-secundary);
+    text-transform: uppercase;
+    transition: all .3s;
+}
+
+.field:focus ~label{
+    top: 0;
+    font-size: 1rem;
+}
+
+.field:focus{
+    border-bottom: solid 1px;
+}
+
+.btn-submit{
+    width: 100%;
+    height: 2rem;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    margin-top: 1rem;
 }
