--- a/style.css
+++ b/style.css
@@ -624,3 +624,177 @@ footer{
     border-radius: .3rem;
     box-shadow: 0 0.1rem 0.6rem #0000009a;
 }
+
+@media (max-width: 1200px) and (min-width:900px){
+    .conhecimento:nth-child(1){
+        grid-column: 3 / 7;
+        grid-row: 1 / 5;
+    }
+    
+    .conhecimento:nth-child(2){
+        grid-column: 2 / 6;
+        grid-row: 3 / 5;
+    }
+    
+    .conhecimento:nth-child(3){
+        grid-column: 3 / 7;
+        grid-row: 5 / -1;
+    }
+    
+    .conhecimento:nth-child(4){
+        grid-column: 12 / 16;
+        grid-row: 1 / 3;
+    }
+    
+    .conhecimento:nth-child(5){
+        grid-column: 12 / 16;
+        grid-row: 3 / 5;
+    }
+    
+    .conhecimento:nth-child(6){
+        grid-column: 11 / 15;
+        grid-row: 5 / -1;
+    }
+    }
+
+@media (max-width: 950px) and (min-width:650px){
+    .conhecimento:nth-child(1){
+        grid-column: 3 / 8;
+        grid-row: 1 / 5;
+    }
+    
+    .conhecimento:nth-child(2){
+        grid-column: 2 / 7;
+        grid-row: 3 / 5;
+    }
+    
+    .conhecimento:nth-child(3){
+        grid-column: 3 / 8;
+        grid-row: 5 / -1;
+    }
+    
+    .conhecimento:nth-child(4){
+        grid-column: 10 / 16;
+        grid-row: 1 / 3;
+    }
+    
+    .conhecimento:nth-child(5){
+        grid-column: 11 / 16;
+        grid-row: 3 / 5;
+    }
+    
+    .conhecimento:nth-child(6){
+        grid-column: 10 / 16;
+        grid-row: 5 / -1;
+    }
+
+    .conhecimentos-img-wrapper{
+        grid-column: 7 / 11;
+        grid-row: 3 / 6;
+        width: 100%;
+    
+    }
+
+    .projetos{
+        flex-wrap: wrap;
+    }
+
+    .card{
+        width: 100%;
+        margin: 20px 50px 10px 50px;
+    }
+
+    .orcamento-wrapper form{
+        margin-top: 10rem;
+    }
+}
+
+@media (max-width: 649px){
+    .conhecimentos{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding-bottom: 20px;
+    }
+
+    .conhecimento{
+        width: 300px;
+    }
+
+    .conhecimentos-img-wrapper{
+        display: none;
+    }
+
+    .projetos{
+        flex-wrap: wrap;
+    }
+
+    .card{
+        width: 100%;
+        margin: 20px 50px 10px 50px;
+    }
+
+    .sessao-orcamento form {
+        margin: 6rem;
+    }
+
+    .orcamento-wrapper {
+        width: 90%;
+    }
+
+    .orcamento-wrapper form{
+        width: initial;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .orcamento-wrapper h1{
+        font-size: 33px;
+    }
+
+    .contato-wrapper{
+        width: 90%;
+    }
+
+    .contato-left{
+        width: 15%;
+    }
+
+    .contato-right{
+        width: 85%;
+    }
+
+    .contato-right form{
+        width: 100%;
+    }
+
+    .contato-right .imput-group{
+        width: 100%;
+    }
+
+    .contato-right .field{
+        width: 100%;
+    }
+
+    .contato-right input{
+        width: 100%;
+    }
+
+    footer{
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+        height: initial;
+    }
+
+    .footer-content p{
+        margin-bottom: 30px;
+        text-align: center;
+        line-height: 26px;
+    }
+    
+}
